exports[`Emoji a mixture of emoji syntax 1`] = `
<span
  className="">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😆
  </span>
   This is a selection of 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    💩
  </span>
   emoji 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😃
  </span>
   
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👌🏿
  </span>
</span>
`;

exports[`Emoji aliases containing underscores 1`] = `
<span
  className="">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😜
  </span>
   wow
</span>
`;

exports[`Emoji aliases with skin tone modifiers 1`] = `
<span
  className="">
  Say hello to 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👩🏿
  </span>
</span>
`;

exports[`Emoji ascii aliases 1`] = `
<span
  className="">
  That\'s awesome 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😃
  </span>
</span>
`;

exports[`Emoji composed emojis containing U+200D and U+FE0F chars 1`] = `
<span
  className="undefined">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👩‍⚕️
  </span>
</span>
`;

exports[`Emoji does nothing to unknown aliases 1`] = `
<span
  className="">
  An :unknown: alias
</span>
`;

exports[`Emoji emoji with a multiple codepoints 1`] = `
<span
  className="">
  Great work 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👍🏾
  </span>
   
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👨‍👩‍👧‍👦
  </span>
</span>
`;

exports[`Emoji emoji with a single codepoint 1`] = `
<span
  className="">
  This 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    ❤️
  </span>
   is 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👌
  </span>
</span>
`;

exports[`Emoji four emoji should not add onlyEmojiClassName 1`] = `
<span
  className="">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👋
  </span>
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😀
  </span>
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👍🏾
  </span>
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    💞
  </span>
</span>
`;

exports[`Emoji just emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😀
  </span>
</span>
`;

exports[`Emoji just emoticon should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😄
  </span>
</span>
`;

exports[`Emoji simple aliases 1`] = `
<span
  className="">
  This 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😄
  </span>
   is nice 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👍
  </span>
</span>
`;

exports[`Emoji strings with no emoji 1`] = `
<span
  className="">
  Just some words
</span>
`;

exports[`Emoji three emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    😀
  </span>
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👍🏾
  </span>
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    💞
  </span>
</span>
`;

exports[`Emoji with size prop 1`] = `
<span
  className=""
  size={32}>
  This 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👨🏿
  </span>
   is 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👌
  </span>
</span>
`;

exports[`Emoji with svg prop 1`] = `
<span
  className=""
  svg={true}>
  This 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👨🏿
  </span>
   is 
  <span
    className={undefined}
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    }>
    👌
  </span>
</span>
`;

exports[`Emojione a mixture of emoji syntax 1`] = `
<span
  className="">
  <img
    alt="😆"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f606.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   This is a selection of 
  <img
    alt="💩"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f4a9.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   emoji 
  <img
    alt="😃"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👌🏿"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44c-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione aliases containing underscores 1`] = `
<span
  className="">
  <img
    alt="😜"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f61c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   wow
</span>
`;

exports[`Emojione aliases with skin tone modifiers 1`] = `
<span
  className="">
  Say hello to 
  <img
    alt="👩🏿"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f469-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione ascii aliases 1`] = `
<span
  className="">
  That\'s awesome 
  <img
    alt="😃"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione composed emojis containing U+200D and U+FE0F chars 1`] = `
<span
  className="undefined">
  <img
    alt="👩‍⚕️"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f469-2695.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione does nothing to unknown aliases 1`] = `
<span
  className="">
  An :unknown: alias
</span>
`;

exports[`Emojione emoji with a multiple codepoints 1`] = `
<span
  className="">
  Great work 
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👨‍👩‍👧‍👦"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f468-1f469-1f467-1f466.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione emoji with a single codepoint 1`] = `
<span
  className="">
  This 
  <img
    alt="❤️"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/2764.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione four emoji should not add onlyEmojiClassName 1`] = `
<span
  className="">
  <img
    alt="👋"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44b.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="😀"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione just emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione just emoticon should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😄"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione simple aliases 1`] = `
<span
  className="">
  This 
  <img
    alt="😄"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is nice 
  <img
    alt="👍"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44d.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione strings with no emoji 1`] = `
<span
  className="">
  Just some words
</span>
`;

exports[`Emojione three emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione with size prop 1`] = `
<span
  className=""
  size={32}>
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f468-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/png/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Emojione with svg prop 1`] = `
<span
  className="">
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/svg/1f468-1f3ff.svg"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdnjs.cloudflare.com/ajax/libs/emojione/2.2.7/assets/svg/1f44c.svg"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 a mixture of emoji syntax 1`] = `
<span
  className="">
  <img
    alt="😆"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f606.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   This is a selection of 
  <img
    alt="💩"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f4a9.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   emoji 
  <img
    alt="😃"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👌🏿"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44c-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 aliases containing underscores 1`] = `
<span
  className="">
  <img
    alt="😜"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f61c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   wow
</span>
`;

exports[`EmojioneV4 aliases with skin tone modifiers 1`] = `
<span
  className="">
  Say hello to 
  <img
    alt="👩🏿"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f469-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 ascii aliases 1`] = `
<span
  className="">
  That\'s awesome 
  <img
    alt="😃"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 composed emojis containing U+200D and U+FE0F chars 1`] = `
<span
  className="undefined">
  <img
    alt="👩‍⚕️"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f469-2695.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 does nothing to unknown aliases 1`] = `
<span
  className="">
  An :unknown: alias
</span>
`;

exports[`EmojioneV4 emoji with a multiple codepoints 1`] = `
<span
  className="">
  Great work 
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👨‍👩‍👧‍👦"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f468-1f469-1f467-1f466.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 emoji with a single codepoint 1`] = `
<span
  className="">
  This 
  <img
    alt="❤️"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/2764.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 four emoji should not add onlyEmojiClassName 1`] = `
<span
  className="">
  <img
    alt="👋"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44b.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="😀"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 just emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 just emoticon should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😄"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 simple aliases 1`] = `
<span
  className="">
  This 
  <img
    alt="😄"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is nice 
  <img
    alt="👍"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44d.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 strings with no emoji 1`] = `
<span
  className="">
  Just some words
</span>
`;

exports[`EmojioneV4 three emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 with size prop 1`] = `
<span
  className="">
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/32/1f468-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/32/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`EmojioneV4 with svg prop 1`] = `
<span
  className=""
  svg={true}>
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f468-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://cdn.jsdelivr.net/emojione/assets/4.0/png/64/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji a mixture of emoji syntax 1`] = `
<span
  className="">
  <img
    alt="😆"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f606.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   This is a selection of 
  <img
    alt="💩"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f4a9.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   emoji 
  <img
    alt="😃"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👌🏿"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44c-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji aliases containing underscores 1`] = `
<span
  className="">
  <img
    alt="😜"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f61c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   wow
</span>
`;

exports[`Twemoji aliases with skin tone modifiers 1`] = `
<span
  className="">
  Say hello to 
  <img
    alt="👩🏿"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f469-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji ascii aliases 1`] = `
<span
  className="">
  That\'s awesome 
  <img
    alt="😃"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f603.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji composed emojis containing U+200D and U+FE0F chars 1`] = `
<span
  className="undefined">
  <img
    alt="👩‍⚕️"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f469-200d-2695-fe0f.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji does nothing to unknown aliases 1`] = `
<span
  className="">
  An :unknown: alias
</span>
`;

exports[`Twemoji emoji with a multiple codepoints 1`] = `
<span
  className="">
  Great work 
  <img
    alt="👍🏾"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   
  <img
    alt="👨‍👩‍👧‍👦"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f468-200d-1f469-200d-1f467-200d-1f466.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji emoji with a single codepoint 1`] = `
<span
  className="">
  This 
  <img
    alt="❤️"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/2764.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji four emoji should not add onlyEmojiClassName 1`] = `
<span
  className="">
  <img
    alt="👋"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44b.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="😀"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji just emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji just emoticon should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😄"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji simple aliases 1`] = `
<span
  className="">
  This 
  <img
    alt="😄"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f604.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is nice 
  <img
    alt="👍"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44d.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji strings with no emoji 1`] = `
<span
  className="">
  Just some words
</span>
`;

exports[`Twemoji three emoji should add onlyEmojiClassName 1`] = `
<span
  className="onlyEmojiClass">
  <img
    alt="😀"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f600.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="👍🏾"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44d-1f3fe.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
  <img
    alt="💞"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f49e.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji with size prop 1`] = `
<span
  className=""
  size={32}>
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f468-1f3ff.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/72x72/1f44c.png"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`Twemoji with svg prop 1`] = `
<span
  className="">
  This 
  <img
    alt="👨🏿"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/svg/1f468-1f3ff.svg"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
   is 
  <img
    alt="👌"
    className={undefined}
    src="https://twemoji.maxcdn.com/2/svg/1f44c.svg"
    style={
      Object {
        "height": "1em",
        "margin": "0 .05em 0 .1em",
        "verticalAlign": "-0.1em",
        "width": "1em",
      }
    } />
</span>
`;

exports[`toArray a mixture of emoji syntax 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😆
</span>,
  " This is a selection of ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    💩
</span>,
  " emoji ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    👌🏿
</span>,
]
`;

exports[`toArray consecutive ascii and non char word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  "a",
]
`;

exports[`toArray consecutive ascii and simple alias emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😄
</span>,
]
`;

exports[`toArray consecutive ascii and unicode emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    💩
</span>,
]
`;

exports[`toArray consecutive different ascii emojis 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😄
</span>,
]
`;

exports[`toArray consecutive different ascii emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
]
`;

exports[`toArray consecutive same ascii emojis 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
]
`;

exports[`toArray consecutive same ascii emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
]
`;

exports[`toArray consecutive simple alias and ascii emojis that overlap 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😄
</span>,
  ")",
]
`;

exports[`toArray consecutive simple alias and ascii emojis that overlap 2`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
  "o",
]
`;

exports[`toArray consecutive simple alias and ascii emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😄
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
]
`;

exports[`toArray consecutive unicode and ascii emojis without word-break 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    💩
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
]
`;

exports[`toArray edge cases 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
  ": :1",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
  "1:",
]
`;

exports[`toArray emoji and url (no space) 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  "https://google.com",
]
`;

exports[`toArray emoji and url (with space) 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
  " https://google.com",
]
`;

exports[`toArray single letter aliases 1`] = `
Array [
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ✌️
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    *️⃣
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    #️⃣
</span>,
  " ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ⭕
</span>,
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❌
</span>,
]
`;

exports[`toArray url and ascii emoji alias (no space) 1`] = `
Array [
  "https://google.com:)",
]
`;

exports[`toArray url and ascii emoji alias (with space) 1`] = `
Array [
  "https://google.com ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    😃
</span>,
]
`;

exports[`toArray url and emoji (no space) 1`] = `
Array [
  "https://google.com:heart:",
]
`;

exports[`toArray url and emoji (with space) 1`] = `
Array [
  "https://google.com ",
  <span
    className={undefined}
    style={
        Object {
            "height": "1em",
            "margin": "0 .05em 0 .1em",
            "verticalAlign": "-0.1em",
            "width": "1em",
          }
    }>
    ❤️
</span>,
]
`;

exports[`toArray url including ascii emoji alias 1`] = `
Array [
  "https://foo:oops@example.com",
]
`;

exports[`toArray urls not parsing ascii emoji ":/" 1`] = `
Array [
  "https://google.com",
]
`;
